--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Upload App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -19,8 +19,10 @@
             <option value="bottom-left">Bottom Left</option>
             <option value="bottom-right" selected>Bottom Right</option>
         </select>
-        <label for="logo-size">Logo Size:</label>
-        <input type="number" id="logo-size" value="30" min="10" max="100"> px
+        <label for="logo-width">Logo Width:</label>
+        <input type="number" id="logo-width" value="30" min="10" max="100"> px
+        <label for="logo-height">Logo Height:</label>
+        <input type="number" id="logo-height" value="30" min="10" max="100"> px
         <button id="apply-logo-button">Apply Logo to Images</button>
         <button id="download-button">Download All Images</button>
         <div id="image-gallery"></div>
