--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Upload App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -23,9 +23,18 @@
         <input type="number" id="logo-width" value="30" min="10" max="100"> px
         <label for="logo-height">Logo Height:</label>
         <input type="number" id="logo-height" value="30" min="10" max="100"> px
+        <label for="resize-enable">Enable Resizing:</label>
+        <input type="checkbox" id="resize-enable">
+        <label for="resize-width">Resize Width:</label>
+        <input type="number" id="resize-width" value="200" min="10" max="2000"> px
+        <label for="resize-height">Resize Height:</label>
+        <input type="number" id="resize-height" value="200" min="10" max="2000"> px
         <button id="apply-logo-button">Apply Logo to Images</button>
         <button id="download-button">Download All Images</button>
         <div id="image-gallery"></div>
+    </div>
+    <div id="overlay">
+        <div class="loader"></div>
     </div>
     <script src="script.js"></script>
 </body>
