--- a/index.html
+++ b/index.html
@@ -5,32 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Upload App</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         <h1>Image Upload App</h1>
-        <input type="file" id="image-upload" multiple>
-        <button id="upload-button">Upload Images</button>
-        <input type="file" id="logo-upload">
-        <label for="logo-position">Logo Position:</label>
-        <select id="logo-position">
-            <option value="top-left">Top Left</option>
-            <option value="top-right">Top Right</option>
-            <option value="bottom-left">Bottom Left</option>
-            <option value="bottom-right" selected>Bottom Right</option>
-        </select>
-        <label for="logo-width">Logo Width:</label>
-        <input type="number" id="logo-width" value="30" min="10" max="100"> px
-        <label for="logo-height">Logo Height:</label>
-        <input type="number" id="logo-height" value="30" min="10" max="100"> px
-        <label for="resize-enable">Enable Resizing:</label>
-        <input type="checkbox" id="resize-enable">
-        <label for="resize-width">Resize Width:</label>
-        <input type="number" id="resize-width" value="200" min="10" max="2000"> px
-        <label for="resize-height">Resize Height:</label>
-        <input type="number" id="resize-height" value="200" min="10" max="2000"> px
-        <button id="apply-logo-button">Apply Logo to Images</button>
-        <button id="download-button">Download All Images</button>
+        <input type="file" id="image-upload" multiple class="file-input">
+        <button id="upload-button" class="btn">Upload Images</button>
+
+        <div class="tab">
+            <button class="tablinks" onclick="openTab(event, 'ResizeTab')">Resize Images</button>
+            <button class="tablinks" onclick="openTab(event, 'LogoTab')">Add Logo</button>
+        </div>
+
+        <div id="ResizeTab" class="tabcontent">
+            <h2>Resize Images</h2>
+            <div class="input-group">
+                <label for="resize-enable">Enable Resizing:</label>
+                <input type="checkbox" id="resize-enable">
+            </div>
+            <div class="input-group">
+                <label for="resize-width">Resize Width:</label>
+                <input type="number" id="resize-width" value="200" min="10" max="2000" class="number-input"> px
+            </div>
+            <div class="input-group">
+                <label for="resize-height">Resize Height:</label>
+                <input type="number" id="resize-height" value="200" min="10" max="2000" class="number-input"> px
+            </div>
+            <button id="apply-resize-button" class="btn">Apply Resizing</button>
+            <h2>Add Logo After Resizing</h2>
+            <input type="file" id="logo-upload-resize" class="file-input">
+            <div class="input-group">
+                <label for="logo-position-resize">Logo Position:</label>
+                <select id="logo-position-resize" class="select-input">
+                    <option value="top-left">Top Left</option>
+                    <option value="top-right">Top Right</option>
+                    <option value="bottom-left">Bottom Left</option>
+                    <option value="bottom-right" selected>Bottom Right</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <label for="logo-width-resize">Logo Width:</label>
+                <input type="number" id="logo-width-resize" value="30" min="10" max="100" class="number-input"> px
+            </div>
+            <div class="input-group">
+                <label for="logo-height-resize">Logo Height:</label>
+                <input type="number" id="logo-height-resize" value="30" min="10" max="100" class="number-input"> px
+            </div>
+            <button id="apply-logo-resize-button" class="btn">Apply Logo</button>
+        </div>
+
+        <div id="LogoTab" class="tabcontent">
+            <h2>Add Logo</h2>
+            <input type="file" id="logo-upload" class="file-input">
+            <div class="input-group">
+                <label for="logo-position">Logo Position:</label>
+                <select id="logo-position" class="select-input">
+                    <option value="top-left">Top Left</option>
+                    <option value="top-right">Top Right</option>
+                    <option value="bottom-left">Bottom Left</option>
+                    <option value="bottom-right" selected>Bottom Right</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <label for="logo-width">Logo Width:</label>
+                <input type="number" id="logo-width" value="30" min="10" max="100" class="number-input"> px
+            </div>
+            <div class="input-group">
+                <label for="logo-height">Logo Height:</label>
+                <input type="number" id="logo-height" value="30" min="10" max="100" class="number-input"> px
+            </div>
+            <button id="apply-logo-button" class="btn">Apply Logo to Images</button>
+        </div>
+
+        <button id="download-button" class="btn">Download All Images</button>
         <div id="image-gallery"></div>
     </div>
     <div id="overlay">
